# log_macros

./: Cargo.toml  README.md
args/: Cargo.toml
args/src/: lib.rs
private/: Cargo.toml
private/src/: capture.rs  lib.rs
src/: capture.rs  lib.rs  log.rs
src/__private/: capture.rs  mod.rs
template/: Cargo.toml
template/src/: lib.rs
tests/ui/fail/: capture_unsatisfied_trait.rs  capture_unsatisfied_trait.stderr
tests/ui/pass/: capture_simple.rs  simple.rs
