[package]
name = "log_macros"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2018"

[lib]
proc-macro = true

[workspace]
members = [
    "private"
]

[dependencies.proc-macro2]
version = "1"

[dependencies.quote]
version = "1"

[dependencies.log_macros_private]
path = "private"

[dev-dependencies.trybuild]
version = "1"
